Fix display error

--- a/bankingApp/templates/banking/layout.html
+++ b/bankingApp/templates/banking/layout.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 {% if user.is_authenticated %}
-                    <li><a href="#">Home</a></li>
+                    <li><a href="{% url 'index' %}">Home</a></li>
                     <li><a href="#">Account</a></li>
                     <li><a href="#">Transactions</a></li>
                     <li><a href="{% url 'logout' %}">Log out</a></li>
