add naming to header

--- a/bankingApp/static/banking/css/style_index.css
+++ b/bankingApp/static/banking/css/style_index.css
@@ -1,16 +1,19 @@
 body {
     width: 100%;
     margin: 0;
+    background-color: #F5F5F5;
 }
 
 header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     background-color: #283142;
     color: white;
     padding: 20px;
 }
 
 nav ul {
-
     list-style: none;
     text-align: right;
 }
@@ -41,3 +44,8 @@ footer {
     width: 100%;
 }
 
+.bank-name h1 {
+  margin: 0;
+  font-size: 30px;
+  font-weight: bold;
+}
