--- a/bankingApp/templates/banking/layout.html
+++ b/bankingApp/templates/banking/layout.html
@@ -9,6 +9,9 @@
     {% endblock %}
 </head>
     <header>
+        <div class="bank-name">
+            <h1>MXA Banking</h1>
+        </div>
         <nav>
             <ul>
                 {% if user.is_authenticated %}
