--- a/bankingApp/templates/banking/index.html
+++ b/bankingApp/templates/banking/index.html
@@ -3,8 +3,8 @@
 
 {% block content %}
          {% if user.is_authenticated %}
-                <h1>Welcome {{ user.username }} to the MXA Banking App!</h1>
+                <h1>Welcome {{ user.username }} to the MXA Banking system!</h1>
          {% else %}
-                <h1>Welcome to the MXA Banking App. Please log in</h1>
+                <h1>Welcome to the MXA Banking system. Please log in</h1>
          {% endif %}
 {% endblock %}
