--- a/bankingApp/templates/banking/login.html
+++ b/bankingApp/templates/banking/login.html
@@ -35,6 +35,6 @@
             </ul>
           {% endif %}
 
-          <input type="submit" value="Sign Up" />
+          <input type="submit" value="Login" />
       </form>
 {% endblock %}
