--- a/bankingApp/templates/banking/layout.html
+++ b/bankingApp/templates/banking/layout.html
@@ -17,7 +17,7 @@
                 {% if request.user.is_authenticated %}
                     <li><a href="{% url 'index' %}">Home</a></li>
                     <li><a href="{% url 'account' %}">Account</a></li>
-                    <li><a href="#">Transactions</a></li>
+                    <li><a href="{% url 'transactions' %}"</a>Transactions</li>
                 <li><b>{{ request.user.username }} | </b><a href="{% url 'logout' %}">Log out</a></li>
                 {% else %}
                     <li><a href="{% url 'register' %}">Sign Up</a></li>
