--- a/bankingApp/templates/banking/account.html
+++ b/bankingApp/templates/banking/account.html
@@ -1,5 +1,5 @@
 {% extends 'banking/layout.html' %}
-{% block titile %}Account {{ user.user.username }}{% endblock %}
+{% block title %}Account {{ user.user.username }}{% endblock %}
 
 {% block head %}
     {% load static %}
