--- a/bankingApp/templates/banking/index.html
+++ b/bankingApp/templates/banking/index.html
@@ -1,5 +1,5 @@
 {% extends 'banking/layout.html' %}
-{% block titile %}MXA Banking{% endblock %}
+{% block title %}MXA Banking{% endblock %}
 
 {% block head %}
     {% load static %}
