--- a/bankingApp/templates/banking/login.html
+++ b/bankingApp/templates/banking/login.html
@@ -1,5 +1,5 @@
 {% extends 'banking/layout.html' %}
-{% block titile %}Login{% endblock %}
+{% block title %}Login{% endblock %}
 
 {% block head %}
     {% load static %}
