--- a/bankingApp/templates/banking/register.html
+++ b/bankingApp/templates/banking/register.html
@@ -1,5 +1,5 @@
 {% extends 'banking/layout.html' %}
-{% block titile %}Registration{% endblock %}
+{% block title %}Registration{% endblock %}
 
 {% block head %}
     {% load static %}
