--- a/bankingApp/templates/banking/transactions.html
+++ b/bankingApp/templates/banking/transactions.html
@@ -63,4 +63,26 @@
         </table>
     </div>
 
+    {% if is_paginated %}
+        <div class="pagination">
+            <span class="step-links">
+                {% if page_obj.has_previous %}
+                    <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                {% endif %}
+
+                <span class="current">
+                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+                </span>
+
+                {% if page_obj.has_next %}
+                    <a href="?page={{ page_obj.next_page_number }}">next</a>
+                {% endif %}
+            </span>
+        </div>
+    {% endif %}
+
+    <div class="download-btn">
+        <a class="csv-download-link" href="{% url 'transactions_csv' %}" download="transactions.csv">Download transactions in CSV</a>
+    </div>
+
 {% endblock %}
